k8s/08-ocr-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocr-service
  namespace: ai-resume
  labels:
    app: ocr-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocr-service
  template:
    metadata:
      labels:
        app: ocr-service
    spec:
      containers:
        - name: ocr-service
          image: anwartamasna/ai-resume-ocr:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
