k8s/07-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-backend
  namespace: ai-resume
  labels:
    app: app-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-backend
  template:
    metadata:
      labels:
        app: app-backend
    spec:
      containers:
        - name: app-backend
          image: anwartamasna/ai-resume-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 768Mi
---
apiVersion: v1
kind: Service
metadata:
  name: app-backend
  namespace: ai-resume
  labels:
    app: app-backend
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: app-backend
